--- a/gr-iio/grc/iio_pluto_sink.block.yml
+++ b/gr-iio/grc/iio_pluto_sink.block.yml
@@ -3,39 +3,44 @@ label: PlutoSDR Sink
 flags: [ python ]
 
 parameters:
--   id: uri
+  - id: uri
     label: IIO context URI
     dtype: string
     default: ''
 
--   id: frequency
+  - id: frequency
     label: LO Frequency
     dtype: int
     default: 2400000000
 
--   id: samplerate
+  - id: samplerate
     label: Sample Rate
     dtype: int
     default: samp_rate
 
--   id: buffer_size
+  - id: buffer_size
     label: Buffer size
     dtype: int
     default: 0x8000
 
--   id: cyclic
+  - id: cyclic
     label: Cyclic
     dtype: bool
     default: 'False'
     options: ['False', 'True']
     option_labels: ['False', 'True']
 
--   id: attenuation1
+  - id: attenuation1
     label: Attenuation TX1 (dB)
     dtype: float
     default: 10.0
 
--   id: filter_source
+  - id: len_tag_key
+    label: Packet Length Tag
+    dtype: string
+    hide: ${( 'part' if tagged_input else 'all' )}
+
+  - id: filter_source
     category: Filter
     label: Filter Configuration
     dtype: enum
@@ -43,28 +48,28 @@ parameters:
     options: ["'Off'", "'Auto'", "'File'", "'Design'"]
     option_labels: ['Off', 'Auto', 'File', 'Design']
 
--   id: filter
+  - id: filter
     category: Filter
     label: Filter
     dtype: file_open
     default: ''
     hide: ${ ('none' if filter_source == "'File'" else 'all') }
 
--   id: fpass
+  - id: fpass
     category: Filter
     label: Fpass (Hz)
     dtype: float
     default: samp_rate/4
     hide: ${ ('none' if filter_source == "'Design'" else 'all') }
 
--   id: fstop
+  - id: fstop
     category: Filter
     label: Fstop (Hz)
     dtype: float
     default: samp_rate/3
     hide: ${ ('none' if filter_source == "'Design'" else 'all') }
 
--   id: bandwidth
+  - id: bandwidth
     category: Filter
     label: RF Bandwidth (Hz)
     dtype: int
@@ -72,33 +77,35 @@ parameters:
     hide: ${ ('all' if filter_source == "'File'" else 'none') }
 
 inputs:
--   domain: stream
+  - domain: stream
     dtype: complex
 
 asserts:
-- ${ ((samplerate>=2084000) or (filter_source!="'Off'")) }
-- ${ ((filter_source!="'File'") or (len(filter)>0)) }
-- ${ ((samplerate<=61440000) and (samplerate>=65105)) }
-- ${ ((bandwidth<=40000000) and (bandwidth>=200000)) }
-- ${ ((frequency<=6000000000) and (frequency>=47000000)) }
-- ${ ((filter_source!="'Design'")  or (fpass<=samplerate)) }
-- ${ ((filter_source!="'Design'")  or (fstop<=samplerate)) }
-- ${ ((filter_source!="'Design'")  or (fstop>fpass)) }
+  - ${ ((samplerate>=2084000) or (filter_source!="'Off'")) }
+  - ${ ((filter_source!="'File'") or (len(filter)>0)) }
+  - ${ ((samplerate<=61440000) and (samplerate>=65105)) }
+  - ${ ((bandwidth<=40000000) and (bandwidth>=200000)) }
+  - ${ ((frequency<=6000000000) and (frequency>=47000000)) }
+  - ${ ((filter_source!="'Design'") or (fpass<=samplerate)) }
+  - ${ ((filter_source!="'Design'") or (fstop<=samplerate)) }
+  - ${ ((filter_source!="'Design'") or (fstop>fpass)) }
+  - ${ (not tagged_input or len(len_tag_key) > 0) }
 
 templates:
-    imports: from gnuradio import iio
-    make: | 
-        iio.pluto_sink(${uri}, ${buffer_size}, ${cyclic})
-        self.${id}.set_bandwidth(${bandwidth})
-        self.${id}.set_frequency(${frequency})
-        self.${id}.set_samplerate(${samplerate})
-        self.${id}.set_gain(${attenuation1})
-        self.${id}.set_filter_params(${filter_source}, ${filter}, ${fpass}, ${fstop})
-    callbacks:
-        - set_bandwidth(${bandwidth})
-        - set_frequency(${frequency})
-        - set_samplerate(${samplerate})
-        - set_attenuation(${attenuation1})
-        - set_filter_params(${filter_source}, ${filter}, ${fpass}, ${fstop})
+  imports: from gnuradio import iio
+  make: |
+    iio.pluto_sink(${uri}, ${buffer_size}, ${cyclic})
+    self.${id}.set_len_tag_key(${len_tag_key})
+    self.${id}.set_bandwidth(${bandwidth})
+    self.${id}.set_frequency(${frequency})
+    self.${id}.set_samplerate(${samplerate})
+    self.${id}.set_gain(${attenuation1})
+    self.${id}.set_filter_params(${filter_source}, ${filter}, ${fpass}, ${fstop})
+  callbacks:
+    - set_bandwidth(${bandwidth})
+    - set_frequency(${frequency})
+    - set_samplerate(${samplerate})
+    - set_attenuation(${attenuation1})
+    - set_filter_params(${filter_source}, ${filter}, ${fpass}, ${fstop})
 
 file_format: 1
