Matrix interleaver including qa test and example
The matrix interleaver is a hierarchical block that pairs a base
deinterleave block that effectively writes samples into "rows" (1 block of
samples per output) and a base interleave block that outputs samples
iteratively from each input like  "columns".

Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

Add grc file and update blocks.tree.yml.

Fix module for matrix interleaver example

Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

Removed unnecessary lines at top of file.

Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

Guess at Python2 fix, move cyclic import to callback

Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

Changes from PR #4861; docstring, license

Signed-off-by: Jared Dulmage <jared.dulmage@caliola.com>

--- a/gr-blocks/python/blocks/CMakeLists.txt
+++ b/gr-blocks/python/blocks/CMakeLists.txt
@@ -23,6 +23,7 @@ include(GrPython)
 GR_PYTHON_INSTALL(
     FILES
     __init__.py
+    matrix_interleaver.py
     parse_file_metadata.py
     stream_to_vector_decimator.py
     DESTINATION ${GR_PYTHON_DIR}/gnuradio/blocks
