--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -53,16 +53,16 @@ jobs:
         include:
           - distro: 'Ubuntu 20.04'
             containerid: 'gnuradio/ci:ubuntu-20.04-3.9'
-            cxxflags: -Werror
+            cxxflags: -Werror -Wno-error=deprecated-declarations
           - distro: 'Fedora 33'
             containerid: 'gnuradio/ci:fedora-33-3.9'
-            cxxflags: ''
+            cxxflags: -Werror -Wno-error=deprecated-declarations
           - distro: 'CentOS 8.3'
             containerid: 'gnuradio/ci:centos-8.3-3.9'
-            cxxflags: -Werror
+            cxxflags: -Werror -Wno-error=deprecated-declarations
           - distro: 'Debian 10'
             containerid: 'gnuradio/ci-debian-10-3.9:1.0'
-            cxxflags: -Werror
+            cxxflags: -Werror -Wno-error=deprecated-declarations
     name: ${{ matrix.distro }}
     container:
       image: ${{ matrix.containerid }}
