c++ generation: escape "." in translations
Translations are a regex, so "." needs to be escaped. Fix the
remaining unescaped strings.

Signed-off-by: Jeff Long <willcode4@gmail.com>
(cherry picked from commit 7a9f2f5ce7071f7863d615143a2568e5b892e250)
Signed-off-by: Jeff Long <willcode4@gmail.com>

--- a/gr-blocks/grc/blocks_pdu_to_tagged_stream.block.yml
+++ b/gr-blocks/grc/blocks_pdu_to_tagged_stream.block.yml
@@ -32,6 +32,6 @@ cpp_templates:
     declarations: 'blocks::pdu_to_tagged_stream::sptr ${id};'
     make: 'this->${id} = blocks::pdu_to_tagged_stream::make(${type.tv}, ${tag});'
     translations:
-        blocks.: 'blocks::'
+        blocks\.: 'blocks::'
 
 file_format: 1
