--- a/gr-blocks/grc/blocks_complex_to_interleaved_short.block.yml
+++ b/gr-blocks/grc/blocks_complex_to_interleaved_short.block.yml
@@ -15,6 +15,11 @@ parameters:
     option_labels: ['No', 'Yes']
     option_attributes:
         vlen: [1, 2]
+-   id: output_type
+    label: Output type
+    dtype: enum
+    default: 'short'
+    options: [short, sc16]
 
 inputs:
 -   domain: stream
@@ -22,7 +27,7 @@ inputs:
 
 outputs:
 -   domain: stream
-    dtype: short
+    dtype: ${output_type}
     vlen: ${ vector_output.vlen }
 
 templates:
