--- a/gr-blocks/grc/blocks_complex_to_interleaved_char.block.yml
+++ b/gr-blocks/grc/blocks_complex_to_interleaved_char.block.yml
@@ -7,6 +7,11 @@ parameters:
     label: Scale Factor
     dtype: float
     default: '1.0'
+-   id: output_type
+    label: Output type
+    dtype: enum
+    default: 'byte'
+    options: [byte, sc8]
 -   id: vector_output
     label: Vector Output
     dtype: enum
@@ -15,6 +20,7 @@ parameters:
     option_labels: ['No', 'Yes']
     option_attributes:
         vlen: [1, 2]
+    hide: ${ 'all' if output_type == 'sc8' else 'none' }
 
 inputs:
 -   domain: stream
@@ -22,17 +28,17 @@ inputs:
 
 outputs:
 -   domain: stream
-    dtype: byte
-    vlen: ${ vector_output.vlen }
+    dtype: ${output_type}
+    vlen: ${ 1 if output_type == 'sc8' else vector_output.vlen }
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.complex_to_interleaved_char(${vector_output}, ${scale_factor})
+    make: blocks.complex_to_interleaved_char(${output_type == 'sc8' or vector_output}, ${scale_factor})
 
 cpp_templates:
     includes: ['#include <gnuradio/blocks/complex_to_interleaved_char.h>']
     declarations: 'blocks::complex_to_interleaved_char::sptr ${id};'
-    make: 'this->${id} = blocks::complex_to_interleaved_char::make(${vector_output});'
+    make: 'this->${id} = blocks::complex_to_interleaved_char::make(${output_type == "sc8" or vector_output});'
     translations:
         'True': 'true'
         'False': 'false'
