--- a/gr-blocks/grc/blocks_interleaved_short_to_complex.block.yml
+++ b/gr-blocks/grc/blocks_interleaved_short_to_complex.block.yml
@@ -7,6 +7,11 @@ parameters:
     label: Scale Factor
     dtype: float
     default: '1.0'
+-   id: input_type
+    label: Input type
+    dtype: enum
+    default: 'short'
+    options: [short, sc16]
 -   id: vector_input
     label: Vector Input
     dtype: enum
@@ -15,6 +20,7 @@ parameters:
     option_labels: ['No', 'Yes']
     option_attributes:
         vlen: [1, 2]
+    hide: ${ 'all' if input_type == 'sc16' else 'none' }
 -   id: swap
     label: Swap
     dtype: enum
@@ -25,8 +31,8 @@ parameters:
 
 inputs:
 -   domain: stream
-    dtype: short
-    vlen: ${ vector_input.vlen }
+    dtype: ${input_type}
+    vlen: ${ 1 if input_type == 'sc16' else vector_input.vlen }
 
 outputs:
 -   domain: stream
@@ -34,7 +40,7 @@ outputs:
 
 templates:
     imports: from gnuradio import blocks
-    make: blocks.interleaved_short_to_complex(${vector_input}, ${swap},${scale_factor})
+    make: blocks.interleaved_short_to_complex(${input_type == 'sc16' or vector_input},${swap},${scale_factor})
     callbacks:
     - set_swap(${swap})
     - set_scale_factor(${scale_factor})
@@ -42,7 +48,7 @@ templates:
 cpp_templates:
     includes: ['#include <gnuradio/blocks/interleaved_short_to_complex.h>']
     declarations: 'blocks::interleaved_short_to_complex::sptr ${id};'
-    make: 'this->${id} = blocks::interleaved_short_to_complex::make(${vector_input}, ${swap});'
+    make: 'this->${id} = blocks::interleaved_short_to_complex::make(${input_type == "sc16" or vector_input}, ${swap});'
     callbacks:
     - set_swap(${swap})
     - set_scale_factor(${scale_factor})
