--- a/gr-blocks/grc/xmlrpc_client.block.yml
+++ b/gr-blocks/grc/xmlrpc_client.block.yml
@@ -5,7 +5,7 @@ flags: [ python ]
 parameters:
 -   id: addr
     label: Address
-    dtype: raw
+    dtype: string
     default: localhost
 -   id: port
     label: Port
@@ -13,19 +13,19 @@ parameters:
     default: '8080'
 -   id: callback
     label: Callback
-    dtype: raw
-    default: set_
+    dtype: string
+    default: None
 -   id: variable
     label: Variable
     dtype: raw
 
 templates:
     imports: from xmlrpc.client import ServerProxy
-    make: ServerProxy('http://${addr}:${port}')
+    make: ServerProxy('http://'+${addr}+':${port}')
     callbacks:
-    - ${callback}(${variable})
+    - set_${no_quotes(callback)}(${variable})
 
 documentation: |-
-    This block will create an XMLRPC client. The client will execute the callback on the server when the variable is changed. The callback should be a the name of a function registered on the server. The variable should be an expression containing a the name of a variable in flow graph.
+    This block will create an XMLRPC client. The client will execute the callback on the server when the variable is changed. The callback should be the name of a function registered on the server. The variable should be an expression containing the name of a variable in the flowgraph.
 
 file_format: 1
