--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -56,6 +56,10 @@ jobs:
             cxxflags: -Werror -Wno-error=deprecated-declarations -Wno-error=invalid-pch
             ctest_args: '-E "qa_agc|qa_cpp_py_binding|qa_cpp_py_binding_set|qa_ctrlport_probes|qa_qtgui|metainfo_test"'
             ldpath:
+          - distro: 'Ubuntu 18.04'
+            containerid: 'gnuradio/ci:ubuntu-18.04-3.9'
+            cxxflags: -Werror -Wno-error=deprecated-declarations -Wno-error=invalid-pch
+            ldpath:
           - distro: 'Fedora 33'
             containerid: 'gnuradio/ci:fedora-33-3.9'
             cxxflags: -Werror -Wno-error=invalid-pch -Wno-error=deprecated-declarations
