--- a/.github/workflows/make-test.yml
+++ b/.github/workflows/make-test.yml
@@ -54,6 +54,9 @@ jobs:
           - distro: 'Ubuntu 20.04'
             containerid: 'gnuradio/ci:ubuntu-20.04-3.9'
             cxxflags: -Werror -Wno-error=deprecated-declarations
+          - distro: 'Ubuntu 18.04'
+            containerid: 'gnuradio/ci:ubuntu-18.04-3.9'
+            cxxflags: -Werror -Wno-error=deprecated-declarations
           - distro: 'Fedora 33'
             containerid: 'gnuradio/ci:fedora-33-3.9'
             cxxflags: -Werror -Wno-error=deprecated-declarations
