--- a/gr-iio/python/iio/bindings/CMakeLists.txt
+++ b/gr-iio/python/iio/bindings/CMakeLists.txt
@@ -16,9 +16,7 @@ list(APPEND iio_python_files
 
 if(${libad9361_FOUND})
 list(APPEND iio_python_files
-    # fmcomms2_sink_f32c_python.cc
-    # fmcomms2_sink_python.cc
-    # fmcomms2_source_f32c_python.cc
+    fmcomms2_sink_python.cc
     # fmcomms2_source_python.cc
     # fmcomms5_sink_f32c_python.cc
     # fmcomms5_sink_python.cc
